# strip-marks-py

./: .gitignore  .pre-commit-config.yaml  README.md  citation.bib  pyproject.toml
.github/workflows/: ci.yml
src/strip_marks/: constants.py  strip_marks.py
tests/: conftest.py  strip_marks_test.py
tests/data/: README.md  changes.json  no_changes.json  spaces.json  unusual.json
