[project]
name = "strip-marks"
version = "0.0.1"
description = "Small Python library to strip non-spacing marks (e.g., diacritics) from a string"
authors = [
    { name = "Jake W. Ireland", email = "jakewilliami@icloud.com" },
]
readme = "README.md"
requires-python = ">=3.11, <4.0.0"
license = { text = "MIT" }
dependencies = [
    "ispunct>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest==8.3.4"
]

[tool.uv.sources]
ispunct = { git = "https://github.com/jakewilliami/ispunct-py", tag = "v1.0.0" }

[tool.pytest.ini_options]
pythonpath = "src"
